--- a/client/src/scss/components/_media.scss
+++ b/client/src/scss/components/_media.scss
@@ -1,3 +1,22 @@
+@media (max-width: 1024px) {
+    .title.title_active {
+        transform: translateX(-243%);
+    }
+
+    .ant-list {
+        padding: 1rem 2rem;
+    }
+    .modal__button span {
+        font-weight: normal;
+        font-size: 20px;
+        line-height: 21px;
+        padding: 0rem;
+    }
+    .search-form__action {
+        right: 15rem;
+    }
+}
+
 @media (max-width: 768px) {
     .form__auth {
         & .ant-form-item {
@@ -22,6 +41,91 @@
         border: none;
     }
 }
+@media (max-width: 425px) {
+    .title.title_active {
+        transform: translateX(-65%);
+    }
+
+    .search-form {
+        width: 100%;
+        &__input {
+            width: 65%;
+        }
+        &__button {
+            width: 35%;
+        }
+
+        &__action {
+            right: 15rem;
+        }
+        & .ant-form-item-control {
+            width: 100%;
+        }
+    }
+
+    .search_form {
+        &__input_active {
+            width: 76.5%;
+        }
+
+        &__button_active {
+            width: 22.5%;
+        }
+        &_active {
+            & .search-form__action {
+                right: 10rem;
+            }
+        }
+    }
+
+    .modal {
+        padding: 0;
+        &__inner {
+            border-radius: 0px !important;
+        }
+    }
+
+    .local-container {
+        padding: 0;
+    }
+
+    .ant-card.ant-card-bordered.ant-card-hoverable {
+        width: 18.5rem !important;
+    }
+
+    .container.container-auth {
+        padding-top: 0;
+    }
+
+    .form__auth .ant-col.ant-col-16.ant-form-item-control {
+        max-width: 68%;
+    }
+}
+
+@media (max-width: 375px) {
+    .title.title_active {
+        transform: translateX(-50%);
+    }
+    .ant-card.ant-card-bordered.ant-card-hoverable {
+        width: 16.5rem !important;
+    }
+
+    .card_big .itemcard__views {
+        font-size: 13px !important;
+    }
+    .card_big .itemcard__info {
+        bottom: -7px;
+    }
+
+    .card_big .ant-card-meta-description {
+        font-size: 15px;
+        line-height: 9px;
+    }
+
+    .form__auth .ant-form-item {
+        margin-left: 0 !important;
+    }
+}
 
 @media (max-width: 320px) {
     .auth {
@@ -35,6 +139,10 @@
     .form__auth {
         & .ant-form-item {
             margin-left: 0rem !important;
+        }
+
+        & .form__button {
+            padding: 0;
         }
     }
 
@@ -76,8 +184,10 @@
             align-items: center;
         }
     }
-
-    .modal {
+    .search_form_active .search-form__action {
+        right: 3rem;
+    }
+    .search_form_active .search-form__action .modal {
         padding: 0;
         height: 100vh;
 
@@ -100,5 +210,23 @@
     }
     & .ant-btn.button__back {
         margin-bottom: 1rem !important;
+    }
+    .button__back {
+        height: 3rem !important;
+    }
+    .button__send {
+        height: 3rem !important;
+    }
+
+    .ant-card.ant-card-bordered.ant-card-hoverable {
+        width: 13.5rem !important;
+        height: 20rem !important;
+    }
+
+    .ant-card.ant-card-bordered.ant-card-hoverable.card_big {
+        height: 9rem !important;
+    }
+    .modal__button span {
+        font-size: 15px;
     }
 }
